<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dp_20">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/round_corner_white"
        android:orientation="vertical">

        <com.clique.utils.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_40"
            android:gravity="center"
            android:text="@string/savewithfriend"
            android:textColor="@color/color_black"
            android:textSize="@dimen/sp_22"
            android:visibility="visible"
            app:fonttype="@string/semibold" />

        <com.clique.utils.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_40"
            android:gravity="center"
            android:text="@string/invite"
            android:textColor="@color/color_black"
            android:textSize="@dimen/sp_20"
            android:visibility="visible"
            app:fonttype="@string/regular" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_10"
            android:src="@drawable/ic_connected" />

        <com.clique.utils.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center"
            android:text="@string/theybuy"
            android:textColor="@color/color_black"
            android:textSize="@dimen/sp_20"
            android:visibility="visible"
            app:fonttype="@string/regular" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_10"
            android:src="@drawable/ic_connected" />

        <com.clique.utils.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center"
            android:text="@string/yousave"
            android:textColor="@color/color_black"
            android:textSize="@dimen/sp_20"
            android:visibility="visible"
            app:fonttype="@string/regular" />


        <!--  <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:orientation="horizontal">
      -->

        <com.clique.utils.CustomTextView
            android:id="@+id/tv_invite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dp_40"
            android:background="@drawable/round_corner_blue"
            android:drawablePadding="@dimen/dp_5"
            android:drawableRight="@drawable/ic_whatsapp"
            android:gravity="center"
            android:text="@string/invite"
            android:textColor="@color/colorblue"
            android:textSize="@dimen/sp_20"
            android:visibility="visible"
            app:fonttype="@string/semibold" />
        <!-- </LinearLayout>-->
    </LinearLayout>
</LinearLayout>