<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp_20"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corner_white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="@dimen/dp_10"
                android:src="@drawable/ic_cross"
                android:visibility="invisible" />


            <com.clique.utils.CustomTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/support_feedback"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/sp_20"
                android:visibility="visible"
                app:fonttype="@string/semibold" />

            <ImageView
                android:id="@+id/ic_cross"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="@dimen/dp_10"
                android:paddingRight="@dimen/dp_10"
                android:src="@drawable/ic_cross" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/dp_10"
            android:background="#649e9e9e" />

        <com.clique.utils.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dp_40"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Relax! \n Text us on Whatsapp on"
            android:textColor="#4a4a4a"
            android:textSize="@dimen/sp_18"
            android:visibility="visible"
            app:fonttype="@string/regular" />

        <com.clique.utils.CustomTextView
            android:id="@+id/tv_invite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_40"
            android:layout_marginBottom="@dimen/dp_15"
            android:background="@drawable/round_corner_blue"
            android:drawablePadding="@dimen/dp_5"
            android:drawableRight="@drawable/ic_whatsapp"
            android:gravity="center"
            android:text="@string/contact"
            android:textColor="@color/colorblue"
            android:textSize="@dimen/sp_20"
            android:visibility="visible"
            app:fonttype="@string/semibold" />
        <!-- </LinearLayout>-->
    </LinearLayout>
</LinearLayout>