<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingRight="@dimen/dp_30"
        android:paddingLeft="@dimen/dp_30"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dp_15"
        android:background="@drawable/round_corner_white"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_80"
            android:layout_weight="1"
            android:src="@drawable/ic_no_wifi" />

        <com.clique.utils.CustomTextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Whoops!"
            android:textColor="#000000"
            android:textSize="@dimen/sp_18"
            app:fonttype="@string/semibold" />

        <com.clique.utils.CustomTextView
            android:id="@+id/tv_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_20"
            android:gravity="center"
            android:text="No Internet connection."
            android:textColor="#9b9b9b"
            android:textSize="@dimen/sp_16"
            app:fonttype="@string/regular" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="@dimen/dp_30">

            <com.clique.utils.CustomTextView
                android:id="@+id/tv_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_corner_bg"
                android:gravity="center"
                android:text="@string/tryagain"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/sp_20"
                android:visibility="visible"
                app:fonttype="@string/semibold" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>