<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dp_20"
        android:background="@drawable/round_corner_white"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dp_20"
        android:paddingTop="@dimen/dp_20">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dp_25"
            android:layout_weight="1"
            android:src="@drawable/ic_error_package" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.clique.utils.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Hey "
                android:textColor="#9B9B9B"
                android:textSize="@dimen/sp_20"
                app:fonttype="@string/regular" />

            <com.clique.utils.CustomTextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Deepika!"
                android:textColor="@color/colorblue"
                android:textSize="@dimen/sp_20"
                app:fonttype="@string/regular" />
        </LinearLayout>


        <com.clique.utils.CustomTextView
            android:id="@+id/tv_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_20"
            android:gravity="center"
            android:text="Your order is on its way."
            android:textColor="#9B9B9B"
            android:textSize="@dimen/sp_22"
            app:fonttype="@string/semibold" />

        <com.clique.utils.CustomTextView
            android:id="@+id/tv_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/round_corner_bg_digit"
            android:gravity="center"
            android:text="@string/checkstatus"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp_20"
            android:visibility="visible"
            app:fonttype="@string/regular" />
    </LinearLayout>
</LinearLayout>