<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="com.clique.activity.CreateActivity">


    <com.clique.utils.CustomTextView
        android:id="@+id/tv_chosseurbrand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_70"
        android:gravity="center"
        android:text="@string/chosseurbarnd"
        android:textColor="@color/color_black"
        android:textSize="@dimen/sp_18"
        android:visibility="visible"
        app:fonttype="@string/semibold" />
    <!--   <android.support.v4.view.ViewPager
           android:id="@+id/vp_subbrand"
           android:layout_width="match_parent"
           android:layout_height="80dp"
           android:layout_gravity="center"
           android:background="@color/colorPrimary"
           android:clipToPadding="false"
           android:paddingEnd="@dimen/dp_45"
           android:paddingLeft="@dimen/dp_45"
           android:paddingRight="@dimen/dp_45"
           android:paddingStart="@dimen/dp_45" />-->
    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_75"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:clipToPadding="false" />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager_brand"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_220"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:alpha="1"
        android:background="@android:color/transparent"
        android:clipToPadding="false"
        android:visibility="gone" />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager_subbrand"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_200"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dp_10"
        android:alpha="1"
        android:background="@android:color/transparent"
        android:clipToPadding="false"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <View
            android:id="@+id/v_view2"
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:layout_below="@id/viewpager_subbrand"
            android:layout_gravity="bottom"
            android:background="#699e9e9e"
            android:visibility="gone" />

        <com.clique.utils.HorizontalPicker
            android:id="@+id/rl_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/v_view2"
            android:layout_gravity="bottom|right"
            android:layout_marginBottom="@dimen/dp_5"
            android:layout_marginTop="@dimen/dp_5"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="2"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:textColor="@color/text_gray"
            android:textSize="20sp"
            android:visibility="gone"
            app:dividerSize="10dp"
            app:sideItems="1"
            app:values="@array/values" />


        <View
            android:id="@+id/v_view1"
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:layout_below="@id/rl_size"
            android:layout_gravity="bottom"
            android:background="#699e9e9e"
            android:visibility="gone" />

        <com.clique.utils.CustomTextView
            android:id="@+id/tv_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_30"
            android:background="@drawable/round_corner_bg"
            android:gravity="center"
            android:text="@string/next"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp_20"
            android:visibility="gone"
            app:fonttype="@string/semibold" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_loader"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:visibility="visible" />


</FrameLayout>
